2006-07-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tinyxml/*: Add tinyxml to source. Make it part of the WFUT namespace
	  to avoid potential namespace conflicts with other tinyxml versions.

	* libwfut/ChannelFileList.h: Wrapper class around FileList to also
	  contain channel name.

	* libwfut/types.h: Create a FileMap type, mapping filename to a 
	  FileObject.

	* configure.ac, Makefile.am: Added extra dirs.

	* libwfut/FileIO.h, libwfut/FileParser.cpp, libwfut/FileWriter.cpp,
	  libwfut/WFUT.h, libwfut/WFUT.cpp, tests/test3.cpp: Update for
	  ChannelFileList and read/write dir attribute.

	* libwfut/crc32.cpp: Use zlib uLong type.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Rename class to WFUTClient to avoid
	  clashing with namespace. Change the updateChannel method to take a url
	  and path prefix to add to the filenames and source URLS. Create some
	  temporary callbacks to the IO::DownloadComplete and IO::DownloadFailed
	  signals. Download channel and file lists to a location in /tmp (needs
	  to be made platform independant) before parsing. Implement poll
	  method. It is now possible to download a list of channels, a filelist
	  for a given channel and download all the files into a given location.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/ChannelParser.cpp: Name is an attribute, not an element.

	* libwfut/FileParser.cpp: CRC32 is a unsigned long. Fix some parsing
	  problems.

	* libwfut/types.h: Add WFUT namespace.

	* libwfut/IO.cpp, libwfut/IO.h: Add function to create dirs if they 
	  don't exist. Sets dir perms to 0700. DownloadFailed signal now takes
	  a third string containing an error message. Added downloadFile to
	  download a single file. This function blocks until the download
	  completes or fails.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/types.h, libwfut/IO.h, libwfut/IO.cpp, libwfut/WFUT.cpp: Add