@@ -1,3 +1,13 @@
+2007-02-07  Simon Goodall  <libwfut@simongoodall.co.uk>
+
+	* libwfut/Makefile.am: Add crc32 files to build.
+
+	* libwfut/WFUT.cpp, libwfut/WFUT.h: Added function to calculate the 
+	  list of files that need updating.
+
+	* libwfut/crc32.cpp, libwfut/crc32.h: Created header, fixed compiler
+	  errors.
+
 2006-07-12  Simon Goodall  <libwfut@simongoodall.co.uk>
 
 	* tinyxml/*: Add tinyxml to source. Make it part of the WFUT namespace
